--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.screenWrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
